--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,16 @@
-body {
+html,
+div {
     font-family: 'Josefin Sans', sans-serif;
     background-color: #333333;
     color: #FFF;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    color: #D7B637;
 }
 
 .title {
