--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -17,16 +17,22 @@ footer {
     color: #D7B637
 }
 
+.photo {
+    width: 150px;
+}
+
 form input {
     background-color: #FFF !important;
 }
 
-.card-item .type-list {
+.card-item,
+.type-list {
     list-style: none;
     padding-left: 0;
 }
 
-.card-item .card-box {
+.card-item,
+.card-box {
     position: relative;
     margin: 15px;
     border-top: 1px solid #CEBF7B;
@@ -36,7 +42,9 @@ form input {
     border-radius: 10px;
 }
 
-.card-item .card-box .remove-btn {
+.card-item,
+.card-box,
+.remove-btn {
     position: absolute;
     top: 10px;
     right: 15px;
@@ -46,17 +54,23 @@ form input {
     padding: 3px;
 }
 
-.card-item .card-box .name {
+.card-item,
+.card-box,
+.name {
     text-transform: capitalize;
 }
 
-.card-item .type-list .type-item {
+.card-item,
+.type-list,
+.type-item {
     display: inline-block;
     color: #CEBF7B;
     text-transform: capitalize;
     margin-right: 5px;
 }
 
-.card-item .type-list .type-item:last-child {
+.card-item,
+.type-list,
+.type-item:last-child {
     margin-right: 0;
 }
